# sphero_formation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
cfg/: Reynolds.cfg  Test.cfg  sphero_addresses.txt  sphero_init_vel.cfg
launch/: 12_robots_sim.launch  1_robots_sim.launch  4_robots_sim.launch  7_robots_sim.launch  config.launch  manual.launch  manual_sim.launch  reynolds_launch.sh  reynolds_sim.launch  setup.launch
launch/real/: drivers.launch  drivers_launch.sh  flocking.launch  kalman_filter_launch.sh  manual_ctrl_launch.sh  reynolds.launch  reynolds_4.launch  reynolds_launch.sh  setup_real.launch  sphero_real.rviz  tracking.launch
launch/sim/: 12_robots_sim.launch  2_robots_sim.launch  4_robots_sim.launch  7_robots_sim.launch  kalman_filter_sim_launch.sh  manual_sim.launch  reynolds_sim.launch  setup_sim.launch  sphero_sim.rviz
msg/: OdometryArray.msg
resources/: simple_ball.urdf
resources/maps/: across.yaml  borongaj.yaml  empty_10x10.yaml  empty_3x3.yaml  random_10x10.yaml  test_10x10.yaml
resources/sim/: across_4.world  definitions.inc  empty_10x10_12.world  empty_10x10_4.world  empty_10x10_7.world  empty_3x3_2.world  empty_3x3_4.world  empty_3x3_7.world  random_10x10_12.world  random_10x10_7.world  test_10x10_12.world  (+2 more)
scripts/: boids.py  dynamic_reconfigure_node.py  kalman.py  kalman_filter.py  kalman_filter_node.py  kalman_filter_sim_launch.sh  kalman_filter_sim_node.py  man_control.py  nearest_search.py  neighbour_search.py  reynolds_controller.py  simulation_tf.py  sphero_init.py  sphero_test.py  test_reconfigure.py  util.py
sim/: definitions.inc  empty_10x10.world  empty_10x10.yaml  empty_10x10_12.world  empty_10x10_4.world  empty_10x10_7.world  empty_1x1.yaml  empty_3x3.yaml  empty_3x3_2.world  empty_3x3_4.world  empty_3x3_7.world  random_10x10.yaml  random_10x10_12.world  random_10x10_7.world  random_1x1.yaml  random_1x1_1.world  random_1x1_4.world  sphero_test.world  test.world
srv/: ReturnInitials.srv
(+12 files in other folders)
