<?xml version="1.0"?>
<package format="2">
  <name>sphero_formation</name>
  <version>1.0.0</version>
  <description>Python / ROS implementation of Reynolds flocking algorithm. Simulation and real-world usage.</description>

  <maintainer email="marko.krizmancic@fer.hr">marko</maintainer>

  <license>MIT</license>

  <url type="repository">https://github.com/mkrizmancic/sphero_formation</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>dynamic_reconfigure</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
